samples/_failures_safe/1761309197_f4f490_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92805060.c: In function ‘next_token’:
./samples/SAFE/__tmp_92805060.c:157:9: error: expected declaration or statement at end of input
  157 |         token.type = TOKEN_STRING;
      |         ^~~~~
./samples/SAFE/__tmp_92805060.c:157:9: error: expected declaration or statement at end of input
